--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,4 +9,6 @@ dependencies = [
     "playwright>=1.40.0",
     "pydantic>=2.0.0",
     "python-dateutil>=2.8.0",
+    "requests>=2.25.0",
+    "python-dotenv>=1.0.0",
 ]
