--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .env
-__pycache__/*
+**/__pycache__/**
 output/*
 .venv/*
 .vscode/*
@@ -7,3 +7,7 @@ output/*
 .ruff_cache/*
 .mypy_cache/*
 .ruff_cache/*
+**/logs/**
+**/output/**
+**/screenshots/**
+**/screenshots/**
