--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,3 +11,48 @@ dependencies = [
     "requests>=2.25.0",
     "python-dotenv>=1.0.0",
 ]
+
+[project.optional-dependencies]
+dev = [
+    "black>=25.0.0",
+    "flake8>=7.0.0",
+    "isort>=6.0.0",
+]
+
+[tool.black]
+line-length = 88
+target-version = ['py310']
+include = '\.pyi?$'
+extend-exclude = '''
+/(
+  # directories
+  \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | build
+  | dist
+)/
+'''
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+line_length = 88
+known_first_party = ["scraper", "notifications", "utils"]
+known_third_party = ["requests", "pydantic", "playwright", "click", "python-dateutil", "python-dotenv"]
+
+[tool.flake8]
+max-line-length = 88
+extend-ignore = ["E203", "W503"]
+exclude = [
+    ".git",
+    "__pycache__",
+    ".venv",
+    "build",
+    "dist",
+    ".eggs",
+    "*.egg",
+]
