healthcheck env var example

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,6 @@ NOTIFICATION_MIN_SEATS=1
 
 # Only send notifications when trains are available (default: true)
 NOTIFICATION_ONLY_AVAILABLE=true
+
+# Send healthchecks when 
+HEALTHCHECKS_IO_URL=https://hc-ping.com/uuid
