--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,11 @@ NOTIFICATION_ONLY_AVAILABLE=true
 
 # Send healthchecks when 
 HEALTHCHECKS_IO_URL=https://hc-ping.com/uuid
+
+# Deploy to remote machiine using docker
+SSH_USER=root
+SSH_HOST=localhost
+SSH_PORT=22
+
+# docker repositor to use
+REGISTRY_HOST=docker.io
