Implement notifications cache

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,14 @@ NOTIFICATION_ONLY_AVAILABLE=true
 # Send healthchecks when 
 HEALTHCHECKS_IO_URL=https://hc-ping.com/uuid
 
+# Notification Cache Settings
+# Enable caching to prevent duplicate notifications (default: true)
+NOTIFICATION_CACHE_ENABLED=true
+
+# Cache expiry in hours (default: 24)
+# After this time, the same availability will trigger a notification again
+NOTIFICATION_CACHE_EXPIRY_HOURS=24
+
 # Deploy to remote machiine using docker
 SSH_USER=root
 SSH_HOST=localhost
